started the hero section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <img src="./imgs/carrinho_icon.png" alt="">
         </nav>
     </header>
+    <section class="hero flex">
+        <img class="hero-img" src="./imgs/offer.png" alt="">
+    </section>
 </body>
 
 </html>
