add: sale animation (still has work to do)

--- a/index.html
+++ b/index.html
@@ -15,15 +15,35 @@
         <nav class="flex">
             <div class="search-bar flex">
                 <input type="text" class="search-input" placeholder="Enter your search" aria-label="search">
-                <button class="search-submt" aria-label="submit search"><img src="./imgs/search_icon.png" alt=""></button>
+                <button class="search-submt" aria-label="submit search"><img src="./imgs/search_icon.png"
+                        alt=""></button>
             </div>
             <img src="./imgs/profile_icon.png" alt="">
             <img src="./imgs/carrinho_icon.png" alt="">
         </nav>
     </header>
     <section class="hero flex">
+        <div class="scroller" data-direction="left">
+            <div class="inner-scroller">
+                <p>SALE</p>
+                <p>SALE</p>
+                <p>SALE</p>
+                <p>SALE</p>
+                <p>SALE</p>
+            </div>
+        </div>
+        <div class="scroller top" data-direction="right">
+            <div class="inner-scroller">
+                <p>SALE</p>
+                <p>SALE</p>
+                <p>SALE</p>
+                <p>SALE</p>
+                <p>SALE</p>
+            </div>
+        </div>
         <img class="hero-img" src="./imgs/offer.png" alt="">
     </section>
+    <script src="index.js"></script>
 </body>
 
 </html>
