hero section finished

--- a/index.html
+++ b/index.html
@@ -22,7 +22,16 @@
             <img src="./imgs/carrinho_icon.png" alt="">
         </nav>
     </header>
-    <section class="hero flex">
+    <section class="hero">
+        <div class="scroller" data-direction="right">
+            <div class="inner-scroller">
+                <p>SALE</p>
+                <p>SALE</p>
+                <p>SALE</p>
+                <p>SALE</p>
+                <p>SALE</p>
+            </div>
+        </div>
         <div class="scroller" data-direction="left">
             <div class="inner-scroller">
                 <p>SALE</p>
@@ -32,7 +41,16 @@
                 <p>SALE</p>
             </div>
         </div>
-        <div class="scroller top" data-direction="right">
+        <div class="scroller" data-direction="right">
+            <div class="inner-scroller">
+                <p>SALE</p>
+                <p>SALE</p>
+                <p>SALE</p>
+                <p>SALE</p>
+                <p>SALE</p>
+            </div>
+        </div>
+        <div class="scroller" data-direction="left">
             <div class="inner-scroller">
                 <p>SALE</p>
                 <p>SALE</p>
