add: main section (still in progress)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="./imgs/selfcare.png" alt="">
         <nav class="flex">
             <div class="search-bar flex">
-                <input type="text" class="search-input" placeholder="Enter your search" aria-label="search">
+                <input type="text" class="search-input" placeholder="Pesquise aqui" aria-label="search">
                 <button class="search-submt" aria-label="submit search"><img src="./imgs/search_icon.png"
                         alt=""></button>
             </div>
@@ -61,6 +61,68 @@
         </div>
         <img class="hero-img" src="./imgs/offer.png" alt="">
     </section>
+    <main>
+        <section class="promo flex">
+            <h3>PROMOÇÃO</h3>
+            <p>9 produtos</p>
+        </section>
+        <section class="products">
+            <div class="card">
+                <img class="card-img" src="./imgs/elixir.png" alt="">
+                <h4>Elixir da Eternidade</h4>
+                <p>R$ <span>50,00</span></p>
+                <button type="button">Comprar</button>
+            </div>
+            <div class="card">
+                <img class="card-img" src="./imgs/vita_sol.png" alt="">
+                <h4>Vitamina do Sol</h4>
+                <p>R$ <span>50,00</span></p>
+                <button type="button">Comprar</button>
+            </div>
+            <div class="card">
+                <img class="card-img" src="./imgs/vita_lua.png" alt="">
+                <h4>Vitamina da Lua</h4>
+                <p>R$ <span>50,00</span></p>
+                <button type="button">Comprar</button>
+            </div>
+            <div class="card">
+                <img class="card-img" src="./imgs/petalas.png" alt="">
+                <h4>Pétalas de Amor</h4>
+                <p>R$ <span>50,00</span></p>
+                <button type="button">Comprar</button>
+            </div>
+            <div class="card">
+                <img class="card-img" src="./imgs/nutu_essencia.png" alt="">
+                <h4>Essência da Natureza</h4>
+                <p>R$ <span>50,00</span></p>
+                <button type="button">Comprar</button>
+            </div>
+            <div class="card">
+                <img class="card-img" src="./imgs/jasmin.png" alt="">
+                <h4>Jasmin com notas de Rosa</h4>
+                <p>R$ <span>50,00</span></p>
+                <button type="button">Comprar</button>
+            </div>
+            <div class="card">
+                <img class="card-img" src="./imgs/melis_essencia.png" alt="">
+                <h4>Essência de Melissa</h4>
+                <p>R$ <span>50,00</span></p>
+                <button type="button">Comprar</button>
+            </div>
+            <div class="card">
+                <img class="card-img" src="./imgs/pureza.png" alt="">
+                <h4>Pureza Iluminada</h4>
+                <p>R$ <span>50,00</span></p>
+                <button type="button">Comprar</button>
+            </div>
+            <div class="card">
+                <img class="card-img" src="./imgs/patch_essencia.png" alt="">
+                <h4>Essência de patchouli</h4>
+                <p>R$ <span>50,00</span></p>
+                <button type="button">Comprar</button>
+            </div>
+        </section>
+    </main>
     <script src="index.js"></script>
 </body>
 
