main section finished

--- a/index.html
+++ b/index.html
@@ -68,57 +68,84 @@
         </section>
         <section class="products">
             <div class="card">
-                <img class="card-img" src="./imgs/elixir.png" alt="">
+                <div class="wrapper">
+                    <img class="card-img" src="./imgs/elixir.png" alt="">
+                    <p>Bebeu não morre mais e se morrer volta como vampiro #pas</p>
+                </div>
                 <h4>Elixir da Eternidade</h4>
-                <p>R$ <span>50,00</span></p>
+                <p class="price">R$ <span>50,00</span></p>
                 <button type="button">Comprar</button>
             </div>
             <div class="card">
-                <img class="card-img" src="./imgs/vita_sol.png" alt="">
+                <div class="wrapper">
+                    <img class="card-img" src="./imgs/vita_sol.png" alt="">
+                    <p>weoifhwoiefhj</p>
+                </div>
                 <h4>Vitamina do Sol</h4>
-                <p>R$ <span>50,00</span></p>
+                <p class="price">R$ <span>50,00</span></p>
                 <button type="button">Comprar</button>
             </div>
             <div class="card">
-                <img class="card-img" src="./imgs/vita_lua.png" alt="">
+                <div class="wrapper">
+                    <img class="card-img" src="./imgs/vita_lua.png" alt="">
+                    <p>weoifhwoiefhj</p>
+                </div>
                 <h4>Vitamina da Lua</h4>
-                <p>R$ <span>50,00</span></p>
+                <p class="price">R$ <span>50,00</span></p>
                 <button type="button">Comprar</button>
             </div>
             <div class="card">
-                <img class="card-img" src="./imgs/petalas.png" alt="">
+                <div class="wrapper">
+                    <img class="card-img" src="./imgs/petalas.png" alt="">
+                    <p>weoifhwoiefhj</p>
+                </div>
                 <h4>Pétalas de Amor</h4>
-                <p>R$ <span>50,00</span></p>
+                <p class="price">R$ <span>50,00</span></p>
                 <button type="button">Comprar</button>
             </div>
             <div class="card">
-                <img class="card-img" src="./imgs/nutu_essencia.png" alt="">
+                <div class="wrapper">
+                    <img class="card-img" src="./imgs/nutu_essencia.png" alt="">
+                    <p>weoifhwoiefhj</p>
+                </div>
                 <h4>Essência da Natureza</h4>
-                <p>R$ <span>50,00</span></p>
+                <p class="price">R$ <span>50,00</span></p>
                 <button type="button">Comprar</button>
             </div>
             <div class="card">
-                <img class="card-img" src="./imgs/jasmin.png" alt="">
+                <div class="wrapper">
+                    <img class="card-img" src="./imgs/jasmin.png" alt="">
+                    <p>weoifhwoiefhj</p>
+                </div>
                 <h4>Jasmin com notas de Rosa</h4>
-                <p>R$ <span>50,00</span></p>
+                <p class="price">R$ <span>50,00</span></p>
                 <button type="button">Comprar</button>
             </div>
             <div class="card">
-                <img class="card-img" src="./imgs/melis_essencia.png" alt="">
+                <div class="wrapper">
+                    <img class="card-img" src="./imgs/melis_essencia.png" alt="">
+                    <p>weoifhwoiefhj</p>
+                </div>
                 <h4>Essência de Melissa</h4>
-                <p>R$ <span>50,00</span></p>
+                <p class="price">R$ <span>50,00</span></p>
                 <button type="button">Comprar</button>
             </div>
             <div class="card">
-                <img class="card-img" src="./imgs/pureza.png" alt="">
+                <div class="wrapper">
+                    <img class="card-img" src="./imgs/pureza.png" alt="">
+                    <p>weoifhwoiefhj</p>
+                </div>
                 <h4>Pureza Iluminada</h4>
-                <p>R$ <span>50,00</span></p>
+                <p class="price">R$ <span>50,00</span></p>
                 <button type="button">Comprar</button>
             </div>
             <div class="card">
-                <img class="card-img" src="./imgs/patch_essencia.png" alt="">
+                <div class="wrapper">
+                    <img class="card-img" src="./imgs/patch_essencia.png" alt="">
+                    <p>weoifhwoiefhj</p>
+                </div>
                 <h4>Essência de patchouli</h4>
-                <p>R$ <span>50,00</span></p>
+                <p class="price">R$ <span>50,00</span></p>
                 <button type="button">Comprar</button>
             </div>
         </section>
