--- a/index.html
+++ b/index.html
@@ -150,6 +150,19 @@
             </div>
         </section>
     </main>
+    <footer>
+        <section class="contacts flex">
+            <a href="#">Contato</a>
+            <a href="#">Termos de serviço</a>
+            <a href="#">Política de privacidade</a>
+            <a href="#">Cancelamento, troca e reembolso</a>
+        </section>
+        <form action="#">
+            <label for="email">Newsletter</label>
+            <input class="mail-input" type="email" placeholder="Digite seu melhor e-mail">
+            <button class="submit-mail" type="button">Inscrever</button>
+        </form>
+    </footer>
     <script src="index.js"></script>
 </body>
 
