first part of the footer finished

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <h3>PROMOÇÃO</h3>
             <p>9 produtos</p>
         </section>
-        <section class="products">
+        <section class="grid">
             <div class="card">
                 <div class="wrapper">
                     <img class="card-img" src="./imgs/elixir.png" alt="">
@@ -159,7 +159,7 @@
         </section>
         <form action="#">
             <label for="email">Newsletter</label>
-            <input class="mail-input" type="email" placeholder="Digite seu melhor e-mail">
+            <input id="email" type="email" placeholder="Digite seu melhor e-mail">
             <button class="submit-mail" type="button">Inscrever</button>
         </form>
     </footer>
