--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="card">
                 <div class="wrapper">
                     <img class="card-img" src="./imgs/elixir.png" alt="">
-                    <p>Bebeu não morre mais e se morrer volta como vampiro #pas</p>
+                    <p>Bebeu não morre mais e se morrer volta como vampiro!</p>
                 </div>
                 <h4>Elixir da Eternidade</h4>
                 <p class="price">R$ <span>50,00</span></p>
@@ -79,7 +79,7 @@
             <div class="card">
                 <div class="wrapper">
                     <img class="card-img" src="./imgs/vita_sol.png" alt="">
-                    <p>weoifhwoiefhj</p>
+                    <p>Na verdade é só vitamina D, mas você não precisa saber disso U.u</p>
                 </div>
                 <h4>Vitamina do Sol</h4>
                 <p class="price">R$ <span>50,00</span></p>
@@ -88,7 +88,7 @@
             <div class="card">
                 <div class="wrapper">
                     <img class="card-img" src="./imgs/vita_lua.png" alt="">
-                    <p>weoifhwoiefhj</p>
+                    <p>Também é vitamina D, mas deve ser tomada com a maré 🌚</p>
                 </div>
                 <h4>Vitamina da Lua</h4>
                 <p class="price">R$ <span>50,00</span></p>
@@ -97,7 +97,7 @@
             <div class="card">
                 <div class="wrapper">
                     <img class="card-img" src="./imgs/petalas.png" alt="">
-                    <p>weoifhwoiefhj</p>
+                    <p>As vezes vão com pulgões e outros pragas, mas paciência ¯\_(ツ)_/¯</p>
                 </div>
                 <h4>Pétalas de Amor</h4>
                 <p class="price">R$ <span>50,00</span></p>
@@ -106,7 +106,7 @@
             <div class="card">
                 <div class="wrapper">
                     <img class="card-img" src="./imgs/nutu_essencia.png" alt="">
-                    <p>weoifhwoiefhj</p>
+                    <p>Cheiro de grama na chuva e terra molhada, só que não!</p>
                 </div>
                 <h4>Essência da Natureza</h4>
                 <p class="price">R$ <span>50,00</span></p>
@@ -115,7 +115,7 @@
             <div class="card">
                 <div class="wrapper">
                     <img class="card-img" src="./imgs/jasmin.png" alt="">
-                    <p>weoifhwoiefhj</p>
+                    <p>As flores de jasmins acabaram e foi preciso improvisar (✿◠‿◠)</p>
                 </div>
                 <h4>Jasmin com notas de Rosa</h4>
                 <p class="price">R$ <span>50,00</span></p>
@@ -124,7 +124,7 @@
             <div class="card">
                 <div class="wrapper">
                     <img class="card-img" src="./imgs/melis_essencia.png" alt="">
-                    <p>weoifhwoiefhj</p>
+                    <p>Também não sabemos quem é Melissa, mas como ela pagou bem...</p>
                 </div>
                 <h4>Essência de Melissa</h4>
                 <p class="price">R$ <span>50,00</span></p>
@@ -133,7 +133,7 @@
             <div class="card">
                 <div class="wrapper">
                     <img class="card-img" src="./imgs/pureza.png" alt="">
-                    <p>weoifhwoiefhj</p>
+                    <p>A lampâda têm que pagar a parte! E a pureza depende de você ( ͡° ͜ʖ ͡°)</p>
                 </div>
                 <h4>Pureza Iluminada</h4>
                 <p class="price">R$ <span>50,00</span></p>
@@ -142,7 +142,8 @@
             <div class="card">
                 <div class="wrapper">
                     <img class="card-img" src="./imgs/patch_essencia.png" alt="">
-                    <p>weoifhwoiefhj</p>
+                    <p>Prima rica da menta (▀̿̿Ĺ̯̿▀̿ ̿)
+                    </p>
                 </div>
                 <h4>Essência de patchouli</h4>
                 <p class="price">R$ <span>50,00</span></p>
@@ -151,17 +152,30 @@
         </section>
     </main>
     <footer>
-        <section class="contacts flex">
-            <a href="#">Contato</a>
-            <a href="#">Termos de serviço</a>
-            <a href="#">Política de privacidade</a>
-            <a href="#">Cancelamento, troca e reembolso</a>
+        <section class="infos">
+            <div class="contacts flex">
+                <a href="#">Contato</a>
+                <a href="#">Termos de serviço</a>
+                <a href="#">Política de privacidade</a>
+                <a href="#">Cancelamento, troca e reembolso</a>
+            </div>
+            <form action="#">
+                <label for="email">Newsletter</label>
+                <input id="email" type="email" placeholder="Digite seu melhor e-mail">
+                <button class="submit-mail" type="button">Inscrever</button>
+            </form>
         </section>
-        <form action="#">
-            <label for="email">Newsletter</label>
-            <input id="email" type="email" placeholder="Digite seu melhor e-mail">
-            <button class="submit-mail" type="button">Inscrever</button>
-        </form>
+        <section class="social-pay">
+            <div class="social">
+                <img src="./imgs/insta_icon.png" alt="" class="icon">
+                <img src="./imgs/face_icon.png" alt="" class="icon">
+            </div>
+            <div class="payment">
+                <img src="./imgs/master.png" alt="" class="icon">
+                <img src="./imgs/paypal.png" alt="" class="icon">
+                <img src="./imgs/visa.png" alt="" class="icon">
+            </div>
+        </section>
     </footer>
     <script src="index.js"></script>
 </body>
