pré-testes de search-bar

--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
         <img src="./imgs/selfcare.png" alt="">
         <nav class="flex">
             <div class="search-bar flex">
-                <input type="text" class="search-input" placeholder="Pesquise aqui" aria-label="search">
+                <input type="text" class="search-input" placeholder="Pesquise aqui" aria-label="search" autocomplete="off">
                 <button class="search-submt" aria-label="submit search"><img src="./imgs/search_icon.png"
-                        alt=""></button>
-            </div>
+                    alt=""></button>
+                </div>
+
+                <!-- testes de search -->
+                <ul class="suggestions"></ul>
+                <!-- fim dos testes -->
+                
             <img src="./imgs/profile_icon.png" alt="">
             <img src="./imgs/carrinho_icon.png" alt="">
         </nav>
@@ -167,8 +172,8 @@
         </section>
         <section class="social-pay">
             <div class="social">
-                <img src="./imgs/insta_icon.png" alt="" class="icon">
-                <img src="./imgs/face_icon.png" alt="" class="icon">
+                <a href="#"><img src="./imgs/insta_icon.png" alt="" class="icon"></a>
+                <a href="#"><img src="./imgs/face_icon.png" alt="" class="icon"></a>
             </div>
             <div class="payment">
                 <img src="./imgs/master.png" alt="" class="icon">
