--- a/index.html
+++ b/index.html
@@ -14,15 +14,12 @@
         <img src="./imgs/selfcare.png" alt="">
         <nav class="flex">
             <div class="search-bar flex">
-                <input type="text" class="search-input" placeholder="Pesquise aqui" aria-label="search" autocomplete="off">
+                <input type="text" class="search-input" placeholder="Pesquise aqui" aria-label="search"
+                    autocomplete="off">
                 <button class="search-submt" aria-label="submit search"><img src="./imgs/search_icon.png"
-                    alt=""></button>
-                </div>
-
-                <!-- testes de search -->
-                <ul class="suggestions"></ul>
-                <!-- fim dos testes -->
-                
+                        alt=""></button>
+            </div>
+            <ul class="suggestions"></ul>
             <img src="./imgs/profile_icon.png" alt="">
             <img src="./imgs/carrinho_icon.png" alt="">
         </nav>
