--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             <img src="./imgs/profile_icon.png" alt="">
             <button class="cart-icon">
                 <img src="./imgs/carrinho_icon.png" alt="">
-                <span>0</span>
+                <span class="flex">0</span>
             </button>
         </nav>
     </header>
-    <section class="hero">
+    <section class="hero grid">
         <div class="scroller" data-direction="right">
-            <div class="inner-scroller">
+            <div class="inner-scroller flex">
                 <p>SALE</p>
                 <p>SALE</p>
                 <p>SALE</p>
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="scroller" data-direction="left">
-            <div class="inner-scroller">
+            <div class="inner-scroller flex">
                 <p>SALE</p>
                 <p>SALE</p>
                 <p>SALE</p>
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="scroller" data-direction="right">
-            <div class="inner-scroller">
+            <div class="inner-scroller flex">
                 <p>SALE</p>
                 <p>SALE</p>
                 <p>SALE</p>
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="scroller" data-direction="left">
-            <div class="inner-scroller">
+            <div class="inner-scroller flex">
                 <p>SALE</p>
                 <p>SALE</p>
                 <p>SALE</p>
@@ -71,83 +71,83 @@
             <h3>PROMOÇÃO</h3>
             <p>9 produtos</p>
         </section>
-        <section class="grid">
-            <div class="card" data-id="1">
+        <section class="products grid">
+            <div class="card grid" data-id="1">
                 <div class="wrapper">
                     <img class="card-img" src="./imgs/elixir.png" alt="">
-                    <p>Bebeu não morre mais e se morrer volta como vampiro!</p>
+                    <p class="flex">Bebeu não morre mais e se morrer volta como vampiro!</p>
                 </div>
                 <h4>Elixir da Eternidade</h4>
                 <p class="price">R$ <span>50,00</span></p>
                 <button class="buy" type="button">Comprar</button>
             </div>
-            <div class="card" data-id="2">
+            <div class="card grid" data-id="2">
                 <div class="wrapper">
                     <img class="card-img" src="./imgs/vita_sol.png" alt="">
-                    <p>Na verdade é só vitamina D, mas você não precisa saber disso U.u</p>
+                    <p class="flex">Na verdade é só vitamina D, mas você não precisa saber disso U.u</p>
                 </div>
                 <h4>Vitamina do Sol</h4>
                 <p class="price">R$ <span>50,00</span></p>
                 <button class="buy" type="button">Comprar</button>
             </div>
-            <div class="card" data-id="3">
+            <div class="card grid" data-id="3">
                 <div class="wrapper">
                     <img class="card-img" src="./imgs/vita_lua.png" alt="">
-                    <p>Também é vitamina D, mas deve ser tomada com a maré 🌚</p>
+                    <p class="flex">Também é vitamina D, mas deve ser tomada com a maré 🌚</p>
                 </div>
                 <h4>Vitamina da Lua</h4>
                 <p class="price">R$ <span>50,00</span></p>
                 <button class="buy" type="button">Comprar</button>
             </div>
-            <div class="card" data-id="4">
+            <div class="card grid" data-id="4">
                 <div class="wrapper">
                     <img class="card-img" src="./imgs/petalas.png" alt="">
-                    <p>As vezes vão com pulgões e outros pragas, mas paciência ¯\_(ツ)_/¯</p>
+                    <p class="flex">As vezes vão com pulgões e outros pragas, mas paciência ¯\_(ツ)_/¯</p>
                 </div>
                 <h4>Pétalas de Amor</h4>
                 <p class="price">R$ <span>50,00</span></p>
                 <button class="buy" type="button">Comprar</button>
             </div>
-            <div class="card" data-id="5">
+            <div class="card grid" data-id="5">
                 <div class="wrapper">
                     <img class="card-img" src="./imgs/nutu_essencia.png" alt="">
-                    <p>Cheiro de grama na chuva e terra molhada, só que não!</p>
+                    <p class="flex">Cheiro de grama na chuva e terra molhada, só que não!</p>
                 </div>
                 <h4>Essência da Natureza</h4>
                 <p class="price">R$ <span>50,00</span></p>
                 <button class="buy" type="button">Comprar</button>
             </div>
-            <div class="card" data-id="6">
+            <div class="card grid" data-id="6">
                 <div class="wrapper">
                     <img class="card-img" src="./imgs/jasmin.png" alt="">
-                    <p>As flores de jasmins acabaram e foi preciso improvisar (✿◠‿◠)</p>
+                    <p class="flex">As flores de jasmins acabaram e foi preciso improvisar (✿◠‿◠)</p>
                 </div>
                 <h4>Jasmin com Notas de Rosa</h4>
                 <p class="price">R$ <span>50,00</span></p>
                 <button class="buy" type="button">Comprar</button>
             </div>
-            <div class="card" data-id="7">
+            <div class="card grid" data-id="7">
                 <div class="wrapper">
                     <img class="card-img" src="./imgs/melis_essencia.png" alt="">
-                    <p>Também não sabemos quem é Melissa, mas como ela pagou bem...</p>
+                    <p class="flex">Também não sabemos quem é Melissa, mas como ela pagou bem...</p>
                 </div>
                 <h4>Essência de Melissa</h4>
                 <p class="price">R$ <span>50,00</span></p>
                 <button class="buy" type="button">Comprar</button>
             </div>
-            <div class="card" data-id="8">
+            <div class="card grid" data-id="8">
                 <div class="wrapper">
                     <img class="card-img" src="./imgs/pureza.png" alt="">
-                    <p>A lampâda têm que pagar a parte! E a pureza depende de você ( ͡° ͜ʖ ͡°)</p>
+                    <p class="flex">A lampâda têm que pagar a parte! E a pureza depende de você ( ͡° ͜ʖ ͡°)</p>
                 </div>
                 <h4>Pureza Iluminada</h4>
                 <p class="price">R$ <span>50,00</span></p>
                 <button class="buy" type="button">Comprar</button>
             </div>
-            <div class="card" data-id="9">
+            <div class="card grid" data-id="9">
                 <div class="wrapper">
                     <img class="card-img" src="./imgs/patch_essencia.png" alt="">
-                    <p>Prima rica da menta (▀̿̿Ĺ̯̿▀̿ ̿)
+                    <p class="flex">Prima rica da menta (▀̿̿Ĺ̯̿▀̿ ̿)
                     </p>
                 </div>
                 <h4>Essência de Patchouli</h4>
@@ -155,12 +155,10 @@
                 <button class="buy" type="button">Comprar</button>
             </div>
         </section>
-        <aside class="cart">
+        <aside class="cart grid">
             <h2>Seu Carrinho</h2>
-            <div class="cart-list">
-                <div class="cart-item"></div>
-            </div>
-            <div class="cart-btns">
+            <div class="cart-list"></div>
+            <div class="cart-btns grid">
                 <button class="close">Fechar</button>
                 <button class="checkout">Pagamento</button>
             </div>
@@ -180,7 +178,7 @@
                 <button class="submit-mail" type="button">Inscrever</button>
             </form>
         </section>
-        <section class="social-pay">
+        <section class="social-pay flex">
             <div class="social">
                 <a href="#"><img src="./imgs/insta_icon.png" alt="" class="icon"></a>
                 <a href="#"><img src="./imgs/face_icon.png" alt="" class="icon"></a>
