--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="flex">
-        <img src="./imgs/selfcare.png" alt="">
+        <img src="./imgs/selfcare.png" alt="Logo da selfcare">
         <nav class="flex">
             <div class="search-bar flex">
                 <input type="text" class="search-input" placeholder="Pesquise aqui" aria-label="search"
@@ -74,7 +74,7 @@
         <section class="products grid">
             <div class="card grid" data-id="1">
                 <div class="wrapper">
-                    <img class="card-img" src="./imgs/elixir.png" alt="">
+                    <img class="card-img" src="./imgs/elixir.png" alt="ma mão feminina segurando um frasco de Elixir">
                     <p class="flex">Bebeu não morre mais e se morrer volta como vampiro!</p>
                 </div>
                 <h4>Elixir da Eternidade</h4>
@@ -83,7 +83,7 @@
             </div>
             <div class="card grid" data-id="2">
                 <div class="wrapper">
-                    <img class="card-img" src="./imgs/vita_sol.png" alt="">
+                    <img class="card-img" src="./imgs/vita_sol.png" alt="Frasco de Vitamina do Sol em meio a plantas">
                     <p class="flex">Na verdade é só vitamina D, mas você não precisa saber disso U.u</p>
                 </div>
                 <h4>Vitamina do Sol</h4>
@@ -92,7 +92,7 @@
             </div>
             <div class="card grid" data-id="3">
                 <div class="wrapper">
-                    <img class="card-img" src="./imgs/vita_lua.png" alt="">
+                    <img class="card-img" src="./imgs/vita_lua.png" alt="Vários frascos de Vitamina da Lua com plantas no primeiro plano">
                     <p class="flex">Também é vitamina D, mas deve ser tomada com a maré 🌚</p>
                 </div>
                 <h4>Vitamina da Lua</h4>
@@ -101,7 +101,7 @@
             </div>
             <div class="card grid" data-id="4">
                 <div class="wrapper">
-                    <img class="card-img" src="./imgs/petalas.png" alt="">
+                    <img class="card-img" src="./imgs/petalas.png" alt="Pote de Pétalas com flores ao lado e algumas plantas e pedras">
                     <p class="flex">As vezes vão com pulgões e outros pragas, mas paciência ¯\_(ツ)_/¯</p>
                 </div>
                 <h4>Pétalas de Amor</h4>
@@ -110,7 +110,7 @@
             </div>
             <div class="card grid" data-id="5">
                 <div class="wrapper">
-                    <img class="card-img" src="./imgs/nutu_essencia.png" alt="">
+                    <img class="card-img" src="./imgs/nutu_essencia.png" alt="Frasco de Essência da Natureza num fundo branco e algumas plantas ao lado">
                     <p class="flex">Cheiro de grama na chuva e terra molhada, só que não!</p>
                 </div>
                 <h4>Essência da Natureza</h4>
@@ -119,7 +119,7 @@
             </div>
             <div class="card grid" data-id="6">
                 <div class="wrapper">
-                    <img class="card-img" src="./imgs/jasmin.png" alt="">
+                    <img class="card-img" src="./imgs/jasmin.png" alt=""Potes de Jasmin com Notas de Rosas com plantas ao redor>
                     <p class="flex">As flores de jasmins acabaram e foi preciso improvisar (✿◠‿◠)</p>
                 </div>
                 <h4>Jasmin com Notas de Rosa</h4>
@@ -128,7 +128,7 @@
             </div>
             <div class="card grid" data-id="7">
                 <div class="wrapper">
-                    <img class="card-img" src="./imgs/melis_essencia.png" alt="">
+                    <img class="card-img" src="./imgs/melis_essencia.png" alt="Frasco com a caixa de Essência de Melissa na frente de uma folha grande">
                     <p class="flex">Também não sabemos quem é Melissa, mas como ela pagou bem...</p>
                 </div>
                 <h4>Essência de Melissa</h4>
@@ -137,7 +137,7 @@
             </div>
             <div class="card grid" data-id="8">
                 <div class="wrapper">
-                    <img class="card-img" src="./imgs/pureza.png" alt="">
+                    <img class="card-img" src="./imgs/pureza.png" alt="Vários tipos de Pureza iluminada e suas respectivas caixas">
                     <p class="flex">A lampâda têm que pagar a parte! E a pureza depende de você ( ͡° ͜ʖ ͡°)</p>
                 </div>
                 <h4>Pureza Iluminada</h4>
@@ -146,7 +146,7 @@
             </div>
             <div class="card grid" data-id="9">
                 <div class="wrapper">
-                    <img class="card-img" src="./imgs/patch_essencia.png" alt="">
+                    <img class="card-img" src="./imgs/patch_essencia.png" alt="Uma mão segurando um frasco de Essência de Patchouli">
                     <p class="flex">Prima rica da menta (▀̿̿Ĺ̯̿▀̿ ̿)
                     </p>
                 </div>
@@ -181,8 +181,8 @@
         </section>
         <section class="social-pay flex">
             <div class="social">
-                <a href="#"><img src="./imgs/insta_icon.png" alt="" class="icon"></a>
-                <a href="#"><img src="./imgs/face_icon.png" alt="" class="icon"></a>
+                <a href="#"><img src="./imgs/insta_icon.png" alt="Logo do instagram" class="icon"></a>
+                <a href="#"><img src="./imgs/face_icon.png" alt="Logo do facebook" class="icon"></a>
             </div>
             <div class="payment">
                 <img src="./imgs/master.png" alt="" class="icon">
